--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.5"
+dotenv = "0.15.0"
 
+chrono = "0.4.13"
+diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
+diesel_migrations = "1.4.0"
+
+rocket = "0.4.5"
