--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
 diesel_migrations = "1.4.0"
 
 rocket = "0.4.5"
+rocket_contrib = "0.4.5"
+
+# serde
+serde = "1.0.114"
+serde_derive = "1.0.114"
+serde_json = "1.0.57"
