--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,15 @@ edition = "2018"
 
 [dependencies]
 dotenv = "0.15.0"
-
+# logs
+log = "0.4.11"
+# database related
 chrono = "0.4.13"
 diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
 diesel_migrations = "1.4.0"
-
+# rocket
 rocket = "0.4.5"
-rocket_contrib = "0.4.5"
-
+rocket_contrib = { version = "0.4.5", features = ["diesel_postgres_pool"] }
 # serde
 serde = "1.0.114"
 serde_derive = "1.0.114"
