--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ rocket_contrib = { version = "0.4.5", features = ["diesel_postgres_pool"] }
 serde = "1.0.114"
 serde_derive = "1.0.114"
 serde_json = "1.0.57"
+# JWT
+jsonwebtoken = "7.2.0"
