--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ dotenv = "0.15.0"
 # logs
 log = "0.4.11"
 log4rs = { version = "0.13.0", features = [ "background_rotation", "fixed_window_roller", "gzip" ] }
+# error handling
+thiserror = "1.0.20"
 # database related
 chrono = "0.4.13"
 diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
