--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# config
 dotenv = "0.15.0"
+config = "0.10.1"
 # logs
 log = "0.4.11"
 log4rs = { version = "0.13.0", features = [ "background_rotation", "fixed_window_roller", "gzip" ] }
