Add hash mod and make it compatible with passlib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Insertable",
         "chrono",
         "errmsg",
-        "jsonwebtoken"
+        "jsonwebtoken",
+        "passlib"
     ]
 }
