--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 # config
 dotenv = "0.15.0"
 config = "0.10.1"
+# 
+lazy_static = "1.4.0"
 # logs
 log = "0.4.11"
 log4rs = { version = "0.13.0", features = [ "background_rotation", "fixed_window_roller", "gzip" ] }
@@ -26,5 +28,8 @@ rocket_contrib = { version = "0.4.5", features = ["diesel_postgres_pool"] }
 serde = "1.0.114"
 serde_derive = "1.0.114"
 serde_json = "1.0.57"
-# JWT
+# authentications
 jsonwebtoken = "7.2.0"
+ring = "0.16.15"
+rand = "0.7.3"
+base64 = "0.12.3"
